chore: expose Name and rule mapping, read data from directory and merge
